@@ -2681,8 +2681,11 @@ void Actor::fight_back
 		long delta = curtime - lastcall;
 		if (delta > 10000)	// Call if 10 secs. has passed.
 			{
-			eman->remove_text_effect(this);
-			say(first_call_police, last_call_police);
+			if (!gwin->is_in_dungeon())
+				{	   // Don't say anything if in a dungeon.
+				eman->remove_text_effect(this);
+				say(first_call_police, last_call_police);
+				}
 			lastcall = curtime;
 			gwin->attack_avatar(1 + rand()%2);
 			}
