@@ -10,6 +10,13 @@
 	  by applying okay-to-take flag *after* the NPC's stuff is moved to the
 	  dead body.
 	* gamemap.cc: Make sure okay-to-take flag is read for quantity shapes.
+	Rev 7242:
+	* actors.cc, gamewin.cc, shapes/items.h: Guards now bark messages when
+	  coming to arrest you. People calling guards only yell if they can talk.
+	  If there are no guards in the area, people will call for help instead
+	  of calling guards. Guards are no longer called in dungeons, and people
+	  will not yell for them in such places. This should fix bug #3186715
+	  "SI: Automatons in MoF call guards (1.5.0svn)".
 
 2012-12-29	Malignant Manor <malignantmanor@users.sourceforge.net>
 	* actors.cc: Only heal more than 1 hp through mend_hourly if the npc's
